--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://kit.fontawesome.com/f5341e91eb.js"></script>
-    <script type="text/javascript" src="scripts/filesaver.js"></script>
-    <script type="text/javascript" src="scripts/ko.js"></script>
-    <script type="text/javascript" src="scripts/ko-mapping.js"></script>
-    <script type="text/javascript" src="scripts/ko-dict.js"></script>
-    <script type="text/javascript" src="scripts/util.js"></script>
+
     <script type="text/javascript" src="data/classes.js"></script>
     <script type="text/javascript" src="data/codex.js"></script>
     <script type="text/javascript" src="data/flags.js"></script>
@@ -22,11 +18,17 @@
     <script type="text/javascript" src="data/perks.js"></script>
     <script type="text/javascript" src="data/status.js"></script>
     <script type="text/javascript" src="data/vm.js"></script>
+
     <script type="text/javascript" src="ui/display.js"></script>
     <script type="text/javascript" src="ui/layout.js"></script>
     <script type="text/javascript" src="ui/container.js"></script>
     <script type="text/javascript" src="ui/input.js"></script>
 
+    <script type="text/javascript" src="scripts/filesaver.js"></script>
+    <script type="text/javascript" src="scripts/ko.js"></script>
+    <script type="text/javascript" src="scripts/ko-mapping.js"></script>
+    <script type="text/javascript" src="scripts/ko-dict.js"></script>
+    <script type="text/javascript" src="scripts/util.js"></script>
 
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="styles/bootstrap-mod.css" />
@@ -40,18 +42,37 @@
         const fileExtension = '.json';
         const minFileNameLength = 1;
 
+
+        window.onerror = function (evt, src, ln, col, err) {
+            alert(`An unhandled exception ocurred:\n\n${err}`);
+        }
+
+
         $(() => {
             $('#toolbarContainer').collapse();
             $('#toolbarContainer').show();
 
-            $('#btnDisclaimer').on('click', () => {
-                $('#disclaimer').hide();
+            if (localStorage.getItem('ignoreDisclaimer')) {
                 doLoad();
-            });
+            }
+            else {
+                $('#disclaimer').show();
+
+                $('#btnDisclaimer').on('click', () => {
+
+                    if ($('#sellYourSoul').is(':checked')) {
+                        localStorage.setItem('ignoreDisclaimer', '1');
+                    }
+
+                    $('#disclaimer').hide();
+                    doLoad();
+                });
+            }
         });
 
         function doLoad() {
             $('#loadFile').attr('accept', fileExtension);
+
 
             //$('#editField-character').on('change', function () {
             //    const key = $(this).val();
@@ -62,7 +83,9 @@
             //    //$('.nav-tabs button:first').tab('show'); //this might be annoying
             //});
 
+
             // #region File handling
+
             $('body').on('dragenter dragleave dragover', (e) => {
                 e.preventDefault();
                 e.stopPropagation();
@@ -114,7 +137,10 @@
                             //    behavior: 'smooth'
                             //})
 
-                            window.vm || (window.vm = new ViewModel(json));
+                            if (!vm) {
+                                vm = new ViewModel(json);
+                                koInit();
+                            }
 
                             try {
                                 if (!vm.saveLoaded()) {
@@ -126,6 +152,10 @@
                                 }
                             } catch (e) {
                                 alert('An internal error ocurred while processing the save data\n\n' + e)
+                            }
+
+                            if (!vm.isPC()) {
+                                vm.selectedCharacter(vm.chars().find(c => c.name == 'PC'));
                             }
 
                             const fileName = file.name.replace(fileExtension, '');
@@ -164,17 +194,27 @@
                 }
             });
 
+
             $('#btnSaveFile').on('click', () => {
-                const blob = new Blob([ko.mapping.toJSON(vm.save)], { type: 'text/json' });
+
+                var saveObj = ko.mapping.toJS(vm.save);
+                if (!saveObj.saveEdited) {
+                    saveObj.saveEdited = true;
+                }
+
+                const blob = new Blob([JSON.stringify(saveObj)], { type: 'text/json' });
 
                 var fileName = vm.saveName() || vm.originalSaveName();
                 if (!fileName) {
                     fileName = "unnamed";
                 }
 
-                saveAs(blob, fileName + '.' + fileExtension);
+                saveAs(blob, fileName + fileExtension);
+
             });
+
             // #endregion
+
 
             $('#tabGame').append(displayGame());
             $('#tabStats').append(displayStats());
@@ -182,47 +222,22 @@
             $('#tabBody').append(displayBody());
             $('#tabCrotch').append(displayCrotch());
             $('#tabPerks').append(displayPerks());
+            $('#tabStatusEffects').append(displayStatusEffects());
+            $('#tabFlags').append(displayFlags());
 
-            const pDisc = document.createElement('p');
-            pDisc.textContent = 'slow af atm'
-            pDisc.className = 'pb-3';
-            // #region Status Effects
-            $('#tabStatusEffects').append(
-                pDisc,
-                displayStatusEffects()
-            );
-            // #endregion
-
-            // #region Flags
-            const fDisc = document.createElement('p');
-            fDisc.textContent = 'doesnt work correctly if you load a save on top of another one, at least not yet'
-            fDisc.className = 'pb-3';
-
-            $('#tabFlags').append(
-                fDisc,
-                displayFlags()
-            );
-            // #endregion
-
-            // #region Inventory
-            $('#tabInventory').append(
-                document.createElement('p').textContent = 'Low priority, this can be achieved through the game cheat menu.'
-            );
-            // #endregion
-
-            // #region Key Items
-            $('#tabKeyItems').append(
-                document.createElement('p').textContent = 'Low priority, this can be achieved through the game cheat menu.'
-            );
-            // #endregion
+            const lp = document.createElement('p').textContent = 'Low priority, this can be achieved through the game cheat menu.';
+            $('#tabInventory').append(lp);
+            $('#tabKeyItems').append(lp);
 
             $('#content').show();
         }
+
     </script>
 </head>
 
 <body class="bg-secondary text-light">
-    <div id="disclaimer" class="container-fluid text-center p-3">
+
+    <div id="disclaimer" class="container-fluid text-center p-3 hidden">
         <h1 class="display-4">TiTS Save Editor</h1>
         <p>Edit saves at your own risk. If you break or corrupt your savefile don't blame the editor!</p>
         <p>Only JavaScript version save files are supported.</p>
@@ -236,24 +251,38 @@
                 its progress through <a class="link-warning" href="https://github.com/start-5/TiTS.JS-Save-Editor" target="_blank">Github</a>.
                 If you have any issue, suggestion, or feature request please post them in the
                 <a class="link-warning" href="https://github.com/start-5/TiTS.JS-Save-Editor/issues" target="_blank">Issues</a> tab on
-                the <a class="link-warning" href="https://github.com/start-5/TiTS.JS-Save-Editor" target="_blank">Github page</a>.
+                the Github page.
             </p>
         </div>
 
-        <button id="btnDisclaimer" type="button" class="btn btn-info mt-5">Continue</button>
+        <div class="form-check form-switch d-flex justify-content-center">
+            <input id="sellYourSoul" type="checkbox" role="switch" class="form-check-input storage-switch" />
+            <label class="form-check-label ps-1" for="sellYourSoul">Don't show this disclaimer again</label>
+        </div>
+
+        <button id="btnDisclaimer" type="button" class="btn btn-info">Continue</button>
     </div>
 
+
     <div id="content" class="container-fluid hidden">
+
+        <!-- Toolbar -->
         <div class="sticky-top">
+
             <div id="toolbarContainer">
                 <div id="divToolbar" class="bg-info row g-0">
+
+                    <!-- File name -->
                     <div class="col p-2">
                         <div>
                             <label class="visually-hidden" for="inputSaveName">Save File Name</label>
                             <input type="text" class="form-control form-control-sm" id="inputSaveName" disabled data-bind="textInput: $data.saveName, enable: $data.saveLoaded" />
                         </div>
                     </div>
+
+                    <!-- Load / Save -->
                     <div class="col-sm-auto p-2 text-center">
+
                         <div id="divLoadFile" class="d-inline-block">
                             <button type="button" class="btn btn-sm btn-primary" onclick="loadFile.click()">
                                 <i class="fa-solid fa-upload"></i>  Load file
@@ -261,27 +290,36 @@
                             <label class="visually-hidden" for="loadFile">Load File</label>
                             <input class="form-control" type="file" id="loadFile" hidden="hidden">
                         </div>
+
                         <div class="d-inline-block">
                             <button id="btnSaveFile" type="button" class="btn btn-sm btn-primary" disabled data-bind="enable: $data.saveLoaded">
                                 <i class="fa-solid fa-floppy-disk"></i>  Save file
                             </button>
                         </div>
+
                     </div>
+
                 </div>
             </div>
+
+            <!-- Show / Hide -->
             <div class="bg-info text-center mx-auto px-3 py-1 expand-icon rounded-bottom position-relative opacity-50">
                 <a data-bs-toggle="collapse" href="#toolbarContainer" role="button" aria-expanded="true" aria-controls="toolbarContainer"
                    class="link-light underline text-decoration-none stretched-link"><i class="fa-solid fa-arrows-up-down"></i></a>
             </div>
+
         </div>
 
 
+        <!-- Selected character -->
         <div class="text-light pb-2 px-3 w-100">
             <label class="label-sm" for="editField-character">Character</label>
             <select id="editField-character" class="form-select form-select-sm" disabled
                     data-bind="options: chars, optionsText: 'name', value: selectedCharacter, enable: saveLoaded"></select>
         </div>
 
+
+        <!-- Tabs -->
         <div id="editor" class="mt-3">
             <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item" role="presentation">
@@ -328,7 +366,9 @@
                 <div class="tab-pane fade" id="tabKeyItems" role="tabpanel" aria-labelledby="navKeyItems"></div>
             </div>
         </div>
+
     </div>
+
 </body>
 
 </html>
