- figure out the rest of the storageclass binding  - rename 'chars' to 'characters'  - move display to its own object and renames  - add key items  - remove old outclassed code

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="data/global.js"></script>
     <script type="text/javascript" src="data/perks.js"></script>
     <script type="text/javascript" src="data/status.js"></script>
+    <script type="text/javascript" src="data/keyitems.js"></script>
     <script type="text/javascript" src="data/vm.js"></script>
 
     <script type="text/javascript" src="ui/display.js"></script>
@@ -161,7 +162,7 @@
                             }
 
                             if (!vm.isPC()) {
-                                vm.selectedCharacter(vm.chars().find(c => c.name == 'PC'));
+                                vm.selectedCharacter(vm.characters().find(c => c.name == 'PC'));
                             }
 
                             const fileName = file.name.replace(fileExtension, '');
@@ -222,18 +223,19 @@
             // #endregion
 
 
-            $('#tabGame').append(displayGame());
-            $('#tabStats').append(displayStats());
-            $('#tabHead').append(displayHead());
-            $('#tabBody').append(displayBody());
-            $('#tabCrotch').append(displayCrotch());
-            $('#tabPerks').append(displayPerks());
-            $('#tabStatusEffects').append(displayStatusEffects());
-            $('#tabFlags').append(displayFlags());
+            $('#tabGame').append(display.getGame());
+            $('#tabStats').append(display.getStats());
+            $('#tabHead').append(display.getHead());
+            $('#tabBody').append(display.getBody());
+            $('#tabCrotch').append(display.getCrotch());
+            $('#tabPerks').append(display.getPerks());
+            $('#tabStatusEffects').append(display.getStatusEffects());
+            $('#tabFlags').append(display.getFlags());
+            $('#tabKeyItems').append(display.getKeyItems());
 
             const lp = document.createElement('p').textContent = 'Low priority, this can be achieved through the game cheat menu.';
             $('#tabInventory').append(lp);
-            $('#tabKeyItems').append(lp);
+
 
             $('#content').show();
         }
@@ -321,7 +323,7 @@
         <div class="text-light pb-2 px-3 w-100">
             <label class="label-sm" for="editField-character">Character</label>
             <select id="editField-character" class="form-select form-select-sm" disabled
-                    data-bind="options: chars, optionsText: 'name', value: selectedCharacter, enable: saveLoaded"></select>
+                    data-bind="options: characters, optionsText: 'name', value: selectedCharacter, enable: saveLoaded"></select>
         </div>
 
 
