--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -233,6 +234,8 @@
             $('#tabFlags').append(display.getFlags());
             $('#tabKeyItems').append(display.getKeyItems());
 
+            $('#modalStorageBody').append(display.getStoragePopup());
+
             const lp = document.createElement('p').textContent = 'Low priority, this can be achieved through the game cheat menu.';
             $('#tabInventory').append(lp);
 
@@ -243,7 +246,9 @@
     </script>
 </head>
 
+
 <body class="bg-secondary text-light">
+
 
     <div id="disclaimer" class="container-fluid text-center p-3 hidden">
         <h1 class="display-4">TiTS Save Editor</h1>
@@ -377,6 +382,13 @@
 
     </div>
 
+
+    <div class="modal fade" id="modalStorage" tabindex="-1" aria-hidden="true">
+        <div id="modalStorageBody" class="modal-dialog modal-dialog-centered" />
+    </div>
+
+
 </body>
+
 
 </html>
