--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Trials in Tainted Space Save Editor. View and edit save files." />
 
     <title>Trials in Tainted Space Save Editor</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
